src/objects/AcccCrossCuttingUtilityData__mdt.object
<CustomObject>
    <description>Our CrossCutting Utility Data</description>
    <fields>
        <fullName>environmentClass__c</fullName>
        <description>test environment class</description>
        <inlineHelpText>test environment class</inlineHelpText>
        <label>Environment Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>logLevelForTrace__c</fullName>
        <defaultValue>&apos;Finest&apos;</defaultValue>
        <description>The loglevel used when printing out in testmode. This will override users setting</description>
        <inlineHelpText>The loglevel used when printing out in test mode</inlineHelpText>
        <label>LogLevel For Trace</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                    <default>true</default>
                    <label>Debug</label>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Finer</fullName>
                </value>
                <value>
                    <fullName>Finest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maxNumberOfItemsInChunks__c</fullName>
        <description>number of items in a chunk</description>
        <inlineHelpText>number of items in a chunk</inlineHelpText>
        <label>Max Number Of Items In Chunks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>showCCInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the Cross Cutting Information (associated classes) in the logs; most accc_ prefixed classes</description>
        <inlineHelpText>Show the Cross Cutting Information (associated classes) in the logs</inlineHelpText>
        <label>Show CC Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>softAssert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use soft assertion</description>
        <inlineHelpText>use soft assertion</inlineHelpText>
        <label>Soft Assert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>traceFlagOn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is tracing on, loggers contain &apos;trace&apos; which can be controlled by this flag. If on, the data is written</description>
        <inlineHelpText>Is tracing on, loggers contain &apos;trace&apos; which can be controlled by this flag. If on, the data is written</inlineHelpText>
        <label>Trace Flag On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>triggersEnable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>are the triggers enable</description>
        <inlineHelpText>are the triggers enable</inlineHelpText>
        <label>Triggers Enable</label>
        <type>Checkbox</type>
    </fields>
    <label>Accc Cross Cutting Utility Data</label>
    <pluralLabel>Accc Cross Cutting Utility Datas</pluralLabel>
</CustomObject>